dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java
  template:
    metadata:
      labels:
        app: java
    spec:
      containers:
      - name: java-container
        image: bharathchatakondu/java-app:latest
        ports:
        - containerPort: 8080
        # 1. Startup Probe: Handles the slow Java startup
        startupProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          failureThreshold: 30
          periodSeconds: 10
        # 2. Liveness Probe: Checks if the app has crashed/deadlocked
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 15
        # 3. Readiness Probe: Checks if the app is ready to serve traffic
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: java-service
spec:
  type: NodePort
  selector:
    app: java
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30005
